Bug 1934756 - Fix alignment of x close button icon on in-app-notifications. r=freaktechnik,micahilbery
Differential Revision: https://phabricator.services.mozilla.com/D230890

--HG--
extra : moz-landing-system : lando

--- a/mail/themes/shared/mail/inAppNotificationContainer.css
+++ b/mail/themes/shared/mail/inAppNotificationContainer.css
@@ -259,6 +259,9 @@
     fill: currentColor;
     stroke: currentColor;
     z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       border-color: var(--close-button-border-hover);
@@ -278,7 +281,6 @@
 
     & img {
       content: var(--icon-close-xs);
-      margin-block: 2px -1px;
       box-sizing: border-box;
     }
   }
